--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/MobilePad"
+        android:icon="@mipmap/mobile_pad"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
